--- a/style.css
+++ b/style.css
@@ -1,92 +1,84 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
 }
 body {
-    background-color: #D5E1EF;
-    width: 1440px;
-    height: 800px;
+  background-color: #d5e1ef;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .box {
-    width: 320px;
-    height: 497px;
-    background-color: #FFFFFF;
-    margin-top: 70px;
-    margin-left: 495px;
-    border-radius: 20px;
-    border-width: 10px;
-    
+  width: 320px;
+  height: 497px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  border-width: 10px;
 }
 h1 {
-   
-    font-size: 21px;
-    font-family:sans-serif;
-    text-align: center;
-    background-color: #ffffff;
-    color: #1f3251;
-    font-weight: 600;
-    text-shadow: #D5E1EF 2px 2px 0;
-    justify-content:center;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 15px;
-
-    
+  font-size: 21px;
+  font-family: sans-serif;
+  text-align: center;
+  background-color: #ffffff;
+  color: #1f3251;
+  font-weight: 600;
+  text-shadow: #d5e1ef 2px 2px 0;
+  justify-content: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 15px;
 }
 
-p{
-    color: grey;
-    font-size: 14px;
-    text-align: center;
+p {
+  color: grey;
+  font-size: 14px;
+  text-align: center;
 }
 
-.bluebox{
-    
-    
-    width: 288px;
-    height: 286px;
-    background-color: blue;
-    border-radius: 15px;
-    justify-content:center;
-    display: flex;
-    align-items: center;
-    padding: 16px;
+.bluebox {
+  width: 288px;
+  height: 286px;
+  background-color: blue;
+  border-radius: 15px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 16px;
 }
 
 img {
-    width: 180px;
-    height: 183px;
-    
+  width: 180px;
+  height: 183px;
 }
 
 h1 {
-   
-    font-size: 20px;
-    font-family:sans-serif;
-    text-align: center;
-    background-color: #ffffff;
-    color: #1f3251;
-    font-weight: 600;
-    text-shadow: #D5E1EF 2px 2px 0;
-    padding-top: 5px;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-align: center;
+  background-color: #ffffff;
+  color: #1f3251;
+  font-weight: 600;
+  text-shadow: #d5e1ef 2px 2px 0;
+  padding-top: 5px;
 }
 
 .text {
-    width: 287px;
-    height: 191px;
-    padding-left: 23px;
-    padding-top: 338px;
-    padding-top: 25px;
+  width: 287px;
+  height: 191px;
+  padding-left: 23px;
+  padding-top: 338px;
+  padding-top: 25px;
 }
 
-p{
-    color: grey;
-    font-size: 14px;
-    text-align: center;
+p {
+  color: grey;
+  font-size: 14px;
+  text-align: center;
 }
-.block { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 15px;
+.block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 15px;
 }
